--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "bin": {
-  	"brain-games": "src/bin/brain-games.js"
+    "brain-games": "src/bin/brain-games.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/allkas/backend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/allkas/backend-project-lvl1#readme"
+  "homepage": "https://github.com/allkas/backend-project-lvl1#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/node": "^7.6.2",
+    "@babel/preset-env": "^7.6.2"
+  }
 }
