--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
     "@babel/node": "^7.6.2",
-    "@babel/preset-env": "^7.6.2"
+    "@babel/preset-env": "^7.6.2",
+    "readline-sync": "^1.4.10"
   }
 }
