--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react": "^7.16.0"
+  },
+  "dependencies": {
     "readline-sync": "^1.4.10"
   }
 }
